add supertest dependency

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.12.14",
     "@types/serverless": "^1.18.4",
     "@types/sinon": "^7.5.1",
+    "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
     "husky": "^3.1.0",
     "import-sort-style-module": "^6.0.0",
@@ -26,6 +27,7 @@
     "serverless-offline": "^6.0.0-alpha.52",
     "serverless-webpack": "^5.3.1",
     "sinon": "^7.5.0",
+    "supertest": "^4.0.2",
     "ts-loader": "^6.2.1",
     "ts-mocha": "^6.0.0",
     "tslint": "^5.20.1",
